--- a/booqo-web/tsconfig.json
+++ b/booqo-web/tsconfig.json
@@ -19,7 +19,7 @@
       "@core/*": ["src/app/core/*"],
       "@shared/*": ["src/app/shared/*"],
       "@features/*": ["src/app/features/*"],
-      "@models/*": ["src/app/models/*"]
+      "@models/*": ["src/app/core/models/*"]
     }
   },
   "angularCompilerOptions": {
